Clean up build.gradle.kts & add --add-opens arguments to application task.
Cleaned up the build.gradle.kts, moving all the calls to `tasks` into their own block.
As well as adding the JVM arguments `--add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED`, to allow Kryo reflective access to java.nio and sun.nio.ch. (It reflectively accesses bytebuffer classes)

Signed-off-by: solonovamax <solonovamax@12oclockpoint.com>